src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>PardotTest__c</fullName>
        <label>PardotTest</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Denial_Reasons__c</fullName>
        <label>Partner Denial Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliated Entities</fullName>
                </value>
                <value>
                    <fullName>Broker Agreement</fullName>
                </value>
                <value>
                    <fullName>Certification and Authorization</fullName>
                </value>
                <value>
                    <fullName>Character Checks</fullName>
                </value>
                <value>
                    <fullName>Corporate Resolution</fullName>
                </value>
                <value>
                    <fullName>Exclusionary List</fullName>
                </value>
                <value>
                    <fullName>Financials</fullName>
                </value>
                <value>
                    <fullName>Formation Documents</fullName>
                </value>
                <value>
                    <fullName>Loan Related Fees and Related Policy</fullName>
                </value>
                <value>
                    <fullName>MARI Background Check</fullName>
                </value>
                <value>
                    <fullName>NMLS ID – confirm all states they want to do biz in</fullName>
                </value>
                <value>
                    <fullName>Quality Control Policy</fullName>
                </value>
                <value>
                    <fullName>Reputation Check</fullName>
                </value>
                <value>
                    <fullName>Resumes</fullName>
                </value>
                <value>
                    <fullName>W-9</fullName>
                </value>
                <value>
                    <fullName>Company Formation</fullName>
                    <isActive>false</isActive>
                    <label>Company Formation</label>
                </value>
                <value>
                    <fullName>Financial</fullName>
                    <isActive>false</isActive>
                    <label>Financial</label>
                </value>
                <value>
                    <fullName>Licensing</fullName>
                    <isActive>false</isActive>
                    <label>Licensing</label>
                </value>
                <value>
                    <fullName>MARI Report</fullName>
                    <isActive>false</isActive>
                    <label>MARI Report</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Reputation Report</fullName>
                    <isActive>false</isActive>
                    <label>Reputation Report</label>
                </value>
                <value>
                    <fullName>Resume</fullName>
                    <isActive>false</isActive>
                    <label>Resume</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Lead_Status__c</fullName>
        <label>Partner Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>App Sent</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                    <label>In-Process</label>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>No Longer In Business</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <isActive>false</isActive>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>App Package Accepted by Credit Risk</fullName>
                    <isActive>false</isActive>
                    <label>App Package Accepted by Credit Risk</label>
                </value>
                <value>
                    <fullName>App Package Incomplete per Credit Risk</fullName>
                    <isActive>false</isActive>
                    <label>App Package Incomplete per Credit Risk</label>
                </value>
                <value>
                    <fullName>App Package Sent to prospective partner</fullName>
                    <isActive>false</isActive>
                    <label>App Package Sent to prospective partner</label>
                </value>
                <value>
                    <fullName>Application Package Uploaded</fullName>
                    <isActive>false</isActive>
                    <label>Application Package Uploaded</label>
                </value>
                <value>
                    <fullName>Approved but Not Active</fullName>
                    <isActive>false</isActive>
                    <label>Approved but Not Active</label>
                </value>
                <value>
                    <fullName>Cold</fullName>
                    <isActive>false</isActive>
                    <label>Cold</label>
                </value>
                <value>
                    <fullName>Denied by Credit Risk</fullName>
                    <isActive>false</isActive>
                    <label>Denied by Credit Risk</label>
                </value>
                <value>
                    <fullName>Do not Call</fullName>
                    <isActive>false</isActive>
                    <label>Do not Call</label>
                </value>
                <value>
                    <fullName>Hot</fullName>
                    <isActive>false</isActive>
                    <label>Hot</label>
                </value>
                <value>
                    <fullName>InActive</fullName>
                    <isActive>false</isActive>
                    <label>InActive</label>
                </value>
                <value>
                    <fullName>Not Qualified</fullName>
                    <isActive>false</isActive>
                    <label>Not Qualified</label>
                </value>
                <value>
                    <fullName>Warm</fullName>
                    <isActive>false</isActive>
                    <label>Warm</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Loan_Production_Stage__c</fullName>
        <label>Partner Loan Production Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Partner/NeverEngaged</fullName>
                    <label>New Partner/Never Engaged</label>
                </value>
                <value>
                    <fullName>Aged Partner/Never Engaged</fullName>
                </value>
                <value>
                    <fullName>Producing</fullName>
                </value>
                <value>
                    <fullName>Pre-Dormant</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Onboarding_Status__c</fullName>
        <label>Partner Onboarding Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>App Ready</fullName>
                </value>
                <value>
                    <fullName>App Outstanding</fullName>
                </value>
                <value>
                    <fullName>App Pending Review</fullName>
                </value>
                <value>
                    <fullName>Reviewing Docs</fullName>
                </value>
                <value>
                    <fullName>Documents Required</fullName>
                </value>
                <value>
                    <fullName>Escalated Review</fullName>
                </value>
                <value>
                    <fullName>Pending Seasoning</fullName>
                </value>
                <value>
                    <fullName>App Complete/Approved</fullName>
                </value>
                <value>
                    <fullName>App Complete/Denied</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Total_Loan_Stage__c</fullName>
        <label>Partner Total Loan Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never Engaged</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Motivated</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premier_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the checkbox of this Partner a Premier partner</description>
        <inlineHelpText>Check the checkbox of this Partner a Premier partner</inlineHelpText>
        <label>Premier Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_ORM_AE__c</fullName>
        <label>Previous ORM AE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone_Number__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Title__c</fullName>
        <label>Primary Contact Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Regulator__c</fullName>
        <label>Primary Regulator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_contact_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary contact name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Primary contact is not a Business Individual related to this Partner.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Business Partners</relationshipLabel>
        <relationshipName>Business_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QLMS_12_Month_Total_Closings__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>QLMS 12 Month Total Closings</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QLMS_Email__c</fullName>
        <description>This field has been created to use in Email Alerts, and it's value is populated by Workflow Process Field Update</description>
        <label>QLMS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QLMS_First_Name__c</fullName>
        <formula>LEFT(QLMS_Account_Executive__r.Name , FIND(" ", QLMS_Account_Executive__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLMS First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLMS_HECM_Count_2017__c</fullName>
        <label>QLMS HECM Count 2017</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QLMS_LO_Count__c</fullName>
        <label>QLMS LO Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QLMS_Last_Registration_Date__c</fullName>
        <label>QLMS Last Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QLMS_Lead_Registration_Count__c</fullName>
        <label>QLMS Lead Registration Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QLMS_SFDC_Bank_ID__c</fullName>
        <label>QLMS SFDC Bank ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Control_Policy_Received_Date__c</fullName>
        <label>Quality Control Policy Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quality_Control_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quality Control Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reapplication_Status__c</fullName>
        <label>Reapplication Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>App Package Sent to inactive Partner</fullName>
                </value>
                <value>
                    <fullName>Application Package Uploaded</fullName>
                </value>
                <value>
                    <fullName>App Package Accepted by Credit Risk</fullName>
                </value>
                <value>
                    <fullName>App Package Incomplete per Credit Risk</fullName>
                </value>
                <value>
                    <fullName>Reapproved</fullName>
                </value>
                <value>
                    <fullName>Denied by Credit Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Not_being_Interested__c</fullName>
        <label>Reason for Not being Interested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Reverse Product</fullName>
                </value>
                <value>
                    <fullName>Happy with Other Reverse Lenders</fullName>
                </value>
                <value>
                    <fullName>States Available</fullName>
                </value>
                <value>
                    <fullName>Waiting for Purchase</fullName>
                </value>
                <value>
                    <fullName>Not signing up with New Lenders</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recertification_Approval_Date__c</fullName>
        <label>Recertification Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recertification_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check Yes if Approved</description>
        <inlineHelpText>Check Yes if Approved</inlineHelpText>
        <label>Recertification Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_QLMS_AE_Payout__c</fullName>
        <formula>Total_QLMS_AE_Payout__c -  Paid_Amount_to_QLMS_AE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This amount is the balance payment to the QLMS AE</inlineHelpText>
        <label>Remaining QLMS AE Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Questionnaire_Received_Date__c</fullName>
        <label>Renewal Questionnaire Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Questionnaire_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Questionnaire Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Questionnaire_Status__c</fullName>
        <description>Has the Partner completed the Renewal Questionnaire?</description>
        <inlineHelpText>Has the Partner completed the Renewal Questionnaire?</inlineHelpText>
        <label>Renewal Questionnaire Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Need LOX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reputation_Check_Received_Date__c</fullName>
        <label>Reputation Check Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reputation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reputation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ORMS Scenario Packages Requested</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resumes_Received_Date__c</fullName>
        <label>Resumes Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resumes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resumes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reverse_Only_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse Only Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Cell__c</fullName>
        <label>Secondary Contact Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Email__c</fullName>
        <label>Secondary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Name__c</fullName>
        <label>Secondary Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Phone__c</fullName>
        <label>Secondary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Title__c</fullName>
        <label>Secondary Contact Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Branch Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Secondary Market</fullName>
                </value>
                <value>
                    <fullName>Post Close Contact</fullName>
                </value>
                <value>
                    <fullName>Assistant Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Processing Manager</fullName>
                </value>
                <value>
                    <fullName>Third Party Closer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <description>If you choose Other as your Partner Lead source, you must enter a source name here</description>
        <inlineHelpText>If you choose Other as your Partner Lead source, you must enter a source name here</inlineHelpText>
        <label>Other Source Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_Holding_Company__c</fullName>
        <label>State of Holding Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>States_they_would_like_to_do_Business_in__c</fullName>
        <label>States they would like to do Business in</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Reason_for_Not_being_Interested__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Date_Time__c</fullName>
        <description>When was the full application package accepted?</description>
        <inlineHelpText>When was the full application package accepted?</inlineHelpText>
        <label>Submission Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subsidiary__c</fullName>
        <label>Subsidiary</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Team - ORM AE (Source ORM Account Executive Name)</description>
        <formula>Account_Executive_Name__r.Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Team - ORM AE (Source ORM Account Executive Name)</inlineHelpText>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Institution__c</fullName>
        <label>Type of Institution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>State Charter</fullName>
                </value>
                <value>
                    <fullName>Federal charter</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Organization__c</fullName>
        <label>Type of Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Credit Union</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Financial_Received_Date__c</fullName>
        <label>Updated Financial Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Updated_Financial_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated Financial Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_Financial_Status__c</fullName>
        <description>Has the Partner sent in updated Financials?</description>
        <inlineHelpText>Has the Partner sent in updated Financials?</inlineHelpText>
        <label>Updated Financial Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Need LOX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>W_9_Received_Date__c</fullName>
        <label>W-9 Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>W_9__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W-9</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Processed__c</fullName>
        <label>App Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclusionary_Category__c</fullName>
        <label>Exclusionary Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Broker_Comp_Rec_d__c</fullName>
        <description>Broker comp addendum has been received from partner.</description>
        <label>Updated Broker Comp Rec'd</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Called_This_Week__c</fullName>
        <formula>IF (Last_Call__c &gt;= (TODAY() - 7), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Called This Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denial_Date__c</fullName>
        <label>Denial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excluded_Notes__c</fullName>
        <label>Excluded Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Important_Notes__c</fullName>
        <description>Keep Account Notes</description>
        <label>Important Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Call__c</fullName>
        <label>Last Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <description>Last Login Time for Account - Any Contact for account</description>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
</CustomObject>